<resources>
    <string name="app_name">Time Alarm</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="destination">Destination: </string>
    <string name="time_of_arrival">Time of arrival: </string>
    <string name="notification_bed_time">Notification for bed time</string>
    <string name="notification_GTFO">Notification for departure</string>
    <string name="bedtime">Bedtime notification</string>
    <string name="time_to_sleep">Length of sleep</string>
    <string name="snooze_time">Snooze time in minutes</string>
    <string name="morning_time">Set time for morning routine:</string>
    <string name="transport_type">Type of transport:</string>
    <string name="transport_method">Method of time estimation:</string>
    <string name="alarms">Alarms</string>
    <string name="cancellation_dialog_title">App is about to be closed</string>
    <string name="cancellation_dialog_body">
        For application it is mandatory to have GPS access or it will not be functional.
        Do you wish to close the application or grant GPS access?
    </string>
    <string name="cancellation_dialog_close_app_button">Close</string>
    <string name="cancellation_dialog_grant_permission_again_button">Allow Access</string>
    <string name="enter_dest">Enter destination</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="delete_dialog_delete">Delete</string>
    <string name="delete_dialog_text">Do you want to delete this alarm?</string>
    <string name="turn_alarm_off_button">TURN OFF</string>
    <string name="snooze_button">SNOOZE</string>
    <string name="set_arrival_time">Set time of arrival</string>
    <string name="set_default_time">Set time of default alarm</string>
    <string name="default_alarm_info">This time will be used when we fail to get traffic information or location of device</string>
    <string name="ok_button">Save</string>
    <string name="min"> min</string>
    <string name="dest_not_found">Destination was not found</string>
    <string name="loading">Loading</string>
    <string name="loading_text">Please wait while our monkeys find your destination :).</string>
    <string name="bedtime_notification_title">Time for bed!</string>
    <string name="bedtime_notification_body">
        Go to bed and sleep well&#8230;
    </string>
    <string name="bedtime_notification_body_big_text">
        Go to bed and sleep well. If you do it now, you will meet required %s1 hours to sleep.
    </string>
    <string name="search">Search</string>
</resources>
